Fix Category section, wrap it with Search section

--- a/sass/components/_Category.scss
+++ b/sass/components/_Category.scss
@@ -1,5 +1,4 @@
 .Category {
-    position: absolute;
     z-index: $z-mid+1;
     background-color: $colour-white;
     border-radius: $border-radius;
@@ -7,9 +6,11 @@
     background-position: 230px 18px;
     margin: $gutter;
     font-size: 18px;
+    width: 330px;
 
     @media(max-width: 600px){
         position: relative;
+        width: 100%;
     }
     
     &-parent {
@@ -36,5 +37,22 @@
     &-listItemAnchor {
         color: $colour-trout;
         text-decoration: none;
+    }
+}
+.Search {
+    &-section {
+        border-radius: $border-radius;
+        position: fixed;
+        top: 220px;
+        left: calc(100% - 70%);
+        padding: $gutter*3;
+        background: $colour-mineshaft-opaque;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        z-index: $z-front;
+        width: 40%;
     }
 }
